[project]
name = "python-08"
version = "0.1.0"
description = ""
authors = [
    {name = "ahamouda"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
